2009-09-08  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] QtWebKit single API to enable persistency
        https://bugs.webkit.org/show_bug.cgi?id=28682

        Disable LocalStorage, ApplicationCache, HTML5 offline storage by
        default.

        If persistency is enabled the default directory for LocalStorage and
        ApplicationCache is now based on QDesktopServices::DataLocation and not
        QDesktopServices::CacheLocation (as it is expected to keep this data
        around after a reboot).

        If persistency is enabled initialize HTML5 offline storage as well - this
        fixed offline Storage for QtLauncher.



Canonical link: https://commits.webkit.org/39720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48151 268f45cc-cd09-0410-ab3c-d52691b4dbfc